2005-10-08  Alexey Proskuryakov  <ap@nypop.com>

        - Added a test for http://bugzilla.opendarwin.org/show_bug.cgi?id=4821
          Text in submitted forms should be entity-encoded if the current encoding doesn't support it

        * fast/forms/form-data-encoding-expected.txt: Added.
        * fast/forms/form-data-encoding.html: Added.

2005-10-08  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by Darin.

        - Added a test for http://bugzilla.opendarwin.org/show_bug.cgi?id=4707
          Need a way to automatically test for regressions in NSTextInput implementation

        * editing/input/text-input-controller-expected.txt: Added.
        * editing/input/text-input-controller.html: Added.

2005-10-08  Darin Adler  <darin@apple.com>

        - Updated test results for fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=3245
          Support the 'bdo' element

        * fast/dom/HTMLElement/bdo.html: Updated test, no longer says to expect failure.
        * fast/dom/HTMLElement/bdo-expected.checksum: Correct results.
        * fast/dom/HTMLElement/bdo-expected.png: Ditto.
        * fast/dom/HTMLElement/bdo-expected.txt: Ditto.

        * fast/text/international/bidi-LDB-2-HTML-expected.checksum: Updated to expect correct
        results for the section done with <bdo>.
        * fast/text/international/bidi-LDB-2-HTML-expected.png: Ditto.
        * fast/text/international/bidi-LDB-2-HTML-expected.txt: Ditto.

2005-10-08  Darin Adler  <darin@apple.com>

        Test cases for http://bugzilla.opendarwin.org/show_bug.cgi?id=4898
        (Failures in dbaron's bidi ordering tests).

        * fast/dom/HTMLElement/bdo-expected.txt: Updated for differently-breaking text runs.
        * fast/text/international/bidi-override-expected.txt: Updated because override characters no
        longer show up in the render tree.

        * fast/text/international/bidi-LDB-2-CSS-expected.checksum: Added.