@@ -2,4 +2,4 @@ This test checks for a regression against http://bugzilla.opendarwin.org/show_bu
 
 If the test passes, you will see a "PASSED" message below.
 
-PASSED: date value is 307666800000
+PASSED: date is Mon Sep 01 1980
